# local-image-search

./: .gitignore  CLAUDE.md  README.md  benchmark.py  benchmark_results.csv  core.py  daft_image_search.py  embed.py  mcp_server.py  plot_benchmark.py  pyproject.toml  search.py  server.py  simple_image_search.py  test_embed.py
